<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
	xmlns:tools = "http://schemas.android.com/tools"
	android:layout_height = "100dp"
	android:layout_width = "match_parent"
	android:id = "@+id/root_view_places_fragment"
	tools:context = "com.gfeo.teresopolistravelguide.TourismFragment">

	<ListView
		android:layout_width = "match_parent"
		android:layout_height = "match_parent"
		android:id="@+id/places_listview"/>

</LinearLayout>
