<?xml version="1.0" encoding="utf-8"?>

<!-- IDs follow the syntax Prefix >> Type >> Description (if applicable)
      - Prefix: can be anything that would be useful for narrowing down the list of IDs in autocomplete when typing one in XML or code.
      - Type: e.g. TextView, ImageView, etc. No spaces
      - Description: describes the element usage e.g. "thumbnail", describing an ImageView
     There may be some malformed IDs, but hopefully not. -->

<android.support.constraint.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
	xmlns:app = "http://schemas.android.com/apk/res-auto"
	xmlns:tools = "http://schemas.android.com/tools"
	android:layout_width = "match_parent"
	android:layout_height = "match_parent"
	tools:context = "com.gfeo.teresopolistravelguide.MainActivity">

	<android.support.design.widget.AppBarLayout
		android:id = "@+id/main_appbar"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content">
		<android.support.v7.widget.Toolbar
			android:id = "@+id/main_toolbar"
			style = "@style/AppBarTheme" />
		<android.support.design.widget.TabLayout
			android:id = "@+id/main_tablayout"
			style = "@style/AppBarTheme.TabLayout" />
	</android.support.design.widget.AppBarLayout>

	<android.support.v4.view.ViewPager
		android:id = "@+id/main_viewpager"
		android:layout_width = "match_parent"
		android:layout_height = "0dp"
		app:layout_constraintTop_toBottomOf = "@id/main_appbar"
		app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>